# Proyectos-DE

./: README.md
airflow-practice/: README.md
airflow-practice-v2/: Dockerfile  README.md  create_table_script.sql  script_query.sql
airflow-practice-v2/data/: cities.csv  clients.csv
airflow-practice-v2/docs/: aws.md  postgres.md  sftp.md
airflow-practice-v2/tmp/: query.csv  tickets.csv  vuelos.csv
airflow-practice/dags/: practica_dag.py
airflow-practice/docs/: docker.md
api-practice/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  api_specifications.yml  compose.yaml  mkdocs.yml  practice.md  pyproject.toml
data-analytics-practice/: Pipfile  README.md  pyproject.toml
data-analytics-practice/notebooks/: Practice - Airports everywhere.ipynb  airports.db
data-modeling-practice/: .gitignore  Pipfile  README.md  dbt_project.yml  profiles.yml
data-modeling-practice/macros/: continent_macro.sql  hierarchy_macro.sql  macro_iag.sql
data-modeling-practice/samples/: dim_airports_routes_sample.csv
fastapi-practice/: .gitignore  Pipfile  README.md  request_salida.json  run-local.sh
spark-practice/: .gitignore  README.md  bonus.ipynb  json_to_tabular.py  pyproject.toml
spark-practice/data/: EAS_MAD_ES_.json  JFK_MAD_ES_.json
spark-practice/final_data/: .part-00000-3ceef71f-e15f-4dfe-92ba-fa6d271c4c1a-c000.csv.crc  part-00000-3ceef71f-e15f-4dfe-92ba-fa6d271c4c1a-c000.csv
spark-practice/final_data/result.csv/: .part-00000-5fc268c3-3269-406f-a1cc-7f4606f986b4-c000.csv.crc  part-00000-5fc268c3-3269-406f-a1cc-7f4606f986b4-c000.csv
(+14 files in other folders)
