[tool.poetry]
name = "data-analytics-practice"
version = "0.1.0"
description = ""
authors = ["Alfonso Manuel Baena González <abaena@nextdigital.es>"]
readme = "README.md"
packages = [{include = "data_analytics_practice"}]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.21.1"
jupyter = "^1.0.0"
pandas = "^2.0.3"
ipykernel = "^6.23.3"
sqlalchemy = "^2.0.17"
ipython-sql = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
